# DragonX-Wallet-Android

./: .gitattributes  .gitignore  COMMIT_MSG.txt  README.md  run60.json  runs.json
.github/workflows/: build.yml
SilentDragonXAndroid/: .gitignore  CONTRIBUTING.md  README.md  build.gradle.kts  build.sh  gradle.properties  settings.gradle.kts
SilentDragonXAndroid/app/: build.gradle
SilentDragonXAndroid/app/src/main/: AndroidManifest.xml
SilentDragonXAndroid/app/src/main/res/color/: selector_button_text_dark.xml  selector_button_text_light.xml  selector_button_text_light_dimmed.xml
SilentDragonXAndroid/app/src/main/res/drawable/: background_balance_detail_amounts_container.xml  background_balance_details_total.xml  background_banner.xml  background_banner_large.xml  background_footer.xml  background_gradient_bottom.xml  background_header.xml  background_home.xml  background_title_primary.xml  bg_chip_view.xml  ic_account_circle.xml  ic_arrow_back_black_24dp.xml  ic_background_qr.xml  ic_check_shielded.xml  ic_close_black_24dp.xml  ic_fakebook.xml  ic_logo_landing.xml  ic_mastodon.xml  ic_matrix.xml  ic_peertube.xml  ic_receipt_24dp.xml  ic_receive_funds.xml  ic_scan_overlay.xml  ic_scan_overlay_edited.xml  ic_shield_address.xml  ic_telegram.xml  ic_twatter.xml  ic_website.xml  ic_youtube.xml  ic_zcash_white.xml
SilentDragonXAndroid/app/src/main/res/drawable-v24/: ic_launcher_background.xml  ic_launcher_foreground.xml
SilentDragonXAndroid/app/src/main/res/layout/: fragment_auto_shield_information.xml  fragment_backup.xml  fragment_balance_detail.xml  fragment_consolidate.xml  fragment_export_keys.xml  fragment_funds_available.xml  fragment_history.xml  fragment_home.xml  fragment_landing.xml  fragment_profile.xml  fragment_restore.xml  fragment_scan.xml  fragment_send.xml  fragment_send_address.xml  fragment_send_final.xml  fragment_send_memo.xml  fragment_settings.xml  fragment_tab_layout.xml  fragment_tab_receive_shielded.xml  fragment_transaction.xml  item_seed_word.xml  (+1 more)
SilentDragonXAndroid/build-convention/: build.gradle.kts  gradle.lockfile  settings.gradle.kts
SilentDragonXAndroid/build-convention/src/main/kotlin/: zcash.ktlint-conventions.gradle.kts
SilentDragonXAndroid/buildSrc/: build.gradle.kts
SilentDragonXAndroid/feedback/: build.gradle
SilentDragonXAndroid/lockbox/: build.gradle
SilentDragonXAndroid/qrecycler/: build.gradle
dragonx-android-wallet-sdk/: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  gradle.properties
dragonx-android-wallet-sdk/sdk-lib/: Cargo.toml  build.gradle.kts
dragonx-android-wallet-sdk/sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/jni/: BranchIdTest.kt
dragonx-android-wallet-sdk/sdk-lib/src/main/assets/co.electriccoin.zcash/checkpoint/mainnet/: 1.json  10000.json  100000.json  1000000.json  1010000.json  1020000.json  1030000.json  1040000.json  1050000.json  1060000.json  1070000.json  1080000.json  1090000.json  110000.json  1100000.json  1110000.json  1120000.json  1130000.json  1140000.json  1150000.json  1160000.json  1170000.json  1180000.json  1190000.json  120000.json  1200000.json  1210000.json  1220000.json  1230000.json  1240000.json  1250000.json  1260000.json  1270000.json  1280000.json  1290000.json  130000.json  1300000.json  1310000.json  1320000.json  1330000.json  (+243 more)
dragonx-android-wallet-sdk/sdk-lib/src/main/assets/co.electriccoin.zcash/checkpoint/testnet/: 1150000.json
dragonx-android-wallet-sdk/sdk-lib/src/main/java/cash/z/ecc/android/sdk/: Initializer.kt  SdkSynchronizer.kt  Synchronizer.kt
dragonx-android-wallet-sdk/sdk-lib/src/main/java/cash/z/ecc/android/sdk/block/: CompactBlockProcessor.kt
dragonx-android-wallet-sdk/sdk-lib/src/main/java/cash/z/ecc/android/sdk/exception/: Exceptions.kt
dragonx-android-wallet-sdk/sdk-lib/src/main/java/cash/z/ecc/android/sdk/ext/: ZcashSdk.kt
dragonx-android-wallet-sdk/sdk-lib/src/main/java/cash/z/ecc/android/sdk/internal/: FileTwig.kt  SaplingParamTool.kt
dragonx-android-wallet-sdk/sdk-lib/src/main/java/cash/z/ecc/android/sdk/internal/db/: DerivedDataDb.kt
dragonx-android-wallet-sdk/sdk-lib/src/main/java/cash/z/ecc/android/sdk/internal/service/: LightWalletGrpcService.kt
dragonx-android-wallet-sdk/sdk-lib/src/main/java/cash/z/ecc/android/sdk/internal/transaction/: PagedTransactionRepository.kt  PersistentTransactionManager.kt  TransactionEncoder.kt  TransactionManager.kt  TransactionRepository.kt  WalletTransactionEncoder.kt
dragonx-android-wallet-sdk/sdk-lib/src/main/java/cash/z/ecc/android/sdk/jni/: RustBackend.kt  RustBackendWelding.kt
dragonx-android-wallet-sdk/sdk-lib/src/main/java/cash/z/ecc/android/sdk/model/: LightWalletEndpointExt.kt  Zatoshi.kt  ZcashNetwork.kt
dragonx-android-wallet-sdk/sdk-lib/src/main/rust/: lib.rs
librustzcash/zcash_client_backend/: build.rs
librustzcash/zcash_client_backend/src/data_api/: wallet.rs
librustzcash/zcash_client_sqlite/src/: lib.rs
librustzcash/zcash_client_sqlite/src/wallet/: transact.rs
librustzcash/zcash_primitives/src/: consensus.rs
librustzcash/zcash_primitives/src/constants/: mainnet.rs
librustzcash/zcash_primitives/src/transaction/components/: amount.rs
(+122 files in other folders)
