[package]
name = "zcash-android-wallet-sdk"
version = "0.0.4"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kevin Gorham <kevin.gorham@z.cash>",
]
description = "JNI backend for the Android wallet SDK"
publish = false
edition = "2018"

[dependencies]
android_logger = "0.9"
failure = "0.1"
hex = "0.4"
jni = { version = "0.17", default-features = false }
log = "0.4"
log-panics = "2.0.0"
zcash_client_backend = "0.5"
zcash_client_sqlite = "0.3"
zcash_primitives = "0.5"
zcash_proofs = "0.5"

#### Temporary additions: ####################################
secp256k1 = "0.19"
##############################################################

# Revision corresponds to the partially-complete auto-shielding version, with the NU5
# consensus branch ID and activation heights, and v5 transaction parsing, backported.
# https://github.com/zcash/librustzcash/pull/555
# https://github.com/zcash/librustzcash/pull/558
#[patch.crates-io]
#zcash_client_backend = { git = 'https://github.com/zcash/librustzcash.git', rev='0a1ed9b8acf336bdc20ba49083c66f114ecf6877' }
#zcash_client_sqlite = { git = 'https://github.com/zcash/librustzcash.git', rev='0a1ed9b8acf336bdc20ba49083c66f114ecf6877' }
#zcash_primitives = { git = 'https://github.com/zcash/librustzcash.git', rev='0a1ed9b8acf336bdc20ba49083c66f114ecf6877' }
#zcash_proofs = { git = 'https://github.com/zcash/librustzcash.git', rev='0a1ed9b8acf336bdc20ba49083c66f114ecf6877' }

## Uncomment this to test librustzcash changes locally
#[patch.crates-io]
#zcash_client_backend = { path = '../../clones/librustzcash/zcash_client_backend' }
#zcash_client_sqlite = { path = '../../clones/librustzcash/zcash_client_sqlite' }
#zcash_primitives = { path = '../../clones/librustzcash/zcash_primitives' }
#zcash_proofs = { path = '../../clones/librustzcash/zcash_proofs' }

## Use local librustzcash with parallel scanning support
[patch.crates-io]
zcash_client_backend = { path = "../../librustzcash/zcash_client_backend" }
zcash_client_sqlite = { path = "../../librustzcash/zcash_client_sqlite" }
zcash_primitives = { path = "../../librustzcash/zcash_primitives" }
zcash_proofs = { path = "../../librustzcash/zcash_proofs" }

[features]
mainnet = ["zcash_client_sqlite/mainnet"]
testnet = []

[lib]
name = "zcashwalletsdk"
path = "src/main/rust/lib.rs"
crate-type = ["staticlib", "cdylib"]
