[package]
name = "zcash-android-wallet-sdk"
version = "0.0.4"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kevin Gorham <kevin.gorham@z.cash>",
]
description = "JNI backend for the Android wallet SDK"
publish = false
edition = "2018"

[dependencies]
android_logger = "0.9"
failure = "0.1"
hex = "0.4"
jni = { version = "0.17", default-features = false }
# jni-sys 0.3.1（2024 重新发布）要求 rustc>=1.77，会让 1.65 编不过；锁死回 0.3.0（满足 jni 0.17 的 ^0.3）
jni-sys = "=0.3.0"
# unicode-ident 1.0.24+（2024）要求 rustc>=1.71；换 librustzcash 后被 cargo 升级，锁回 2022 的 1.0.5（纯数据叶子库，无 feature，安全）
unicode-ident = "=1.0.5"
# ryu / itoa（dtolnay 数字格式化叶子库，serde_json 依赖）2024 新版同样 rustc>=1.71；锁回 2022 版本
ryu = "=1.0.11"
itoa = "=1.0.4"
log = "0.4"
log-panics = "2.0.0"
zcash_client_backend = "0.5"
zcash_client_sqlite = "0.3"
zcash_primitives = "0.5"
zcash_proofs = "0.5"

#### Temporary additions: ####################################
secp256k1 = "0.19"
##############################################################

# Revision corresponds to the partially-complete auto-shielding version, with the NU5
# consensus branch ID and activation heights, and v5 transaction parsing, backported.
# https://github.com/zcash/librustzcash/pull/555
# https://github.com/zcash/librustzcash/pull/558
#[patch.crates-io]
#zcash_client_backend = { git = 'https://github.com/zcash/librustzcash.git', rev='0a1ed9b8acf336bdc20ba49083c66f114ecf6877' }
#zcash_client_sqlite = { git = 'https://github.com/zcash/librustzcash.git', rev='0a1ed9b8acf336bdc20ba49083c66f114ecf6877' }
#zcash_primitives = { git = 'https://github.com/zcash/librustzcash.git', rev='0a1ed9b8acf336bdc20ba49083c66f114ecf6877' }
#zcash_proofs = { git = 'https://github.com/zcash/librustzcash.git', rev='0a1ed9b8acf336bdc20ba49083c66f114ecf6877' }

## Uncomment this to test librustzcash changes locally
#[patch.crates-io]
#zcash_client_backend = { path = '../../clones/librustzcash/zcash_client_backend' }
#zcash_client_sqlite = { path = '../../clones/librustzcash/zcash_client_sqlite' }
#zcash_primitives = { path = '../../clones/librustzcash/zcash_primitives' }
#zcash_proofs = { path = '../../clones/librustzcash/zcash_proofs' }

## Use local librustzcash with parallel scanning support
[patch.crates-io]
zcash_client_backend = { path = "../../librustzcash/zcash_client_backend" }
zcash_client_sqlite = { path = "../../librustzcash/zcash_client_sqlite" }
zcash_primitives = { path = "../../librustzcash/zcash_primitives" }
zcash_proofs = { path = "../../librustzcash/zcash_proofs" }

[features]
mainnet = ["zcash_client_sqlite/mainnet"]
testnet = []

[lib]
name = "zcashwalletsdk"
path = "src/main/rust/lib.rs"
crate-type = ["staticlib", "cdylib"]
